--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
+    "uuid": "^9.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.11.18",
+    "@types/uuid": "^9.0.8",
     "prisma": "^6.13.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
